--- a/index.html
+++ b/index.html
@@ -3,73 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Land</title>
-    <style>
-
-        a, h1, p, h2 {
-            font-family: sans-serif;
-        }
-        img {
-            display: inline-block;
-
-
-        }
-        a {
-            display: inline-block;
-            padding: 10px;
-            text-align: center;
-            width: auto;
-
-        }
-        ul li a {
-            width: 150px;
-            background-color: black;
-            color: white;
-            padding: 5px;
-            text-decoration: none;
-            margin: 0 auto;
-
-        }
-        ul li {
-            list-style: none;
-            display: inline-block;
-        }
-        ul {
-            text-align: center;
-            margin: 0;
-            padding: 0;
-
-        }
-        a:hover {
-            background-color: grey;
-            color: black;
-        }
-        a:active {
-            background-color: cyan;
-        }
-        h1 {
-            margin-left: 40%;
-        }
-        p {
-            text-align: center;
-            margin-left: 150px;
-            margin-right: 150px;
-        }
-        h2{
-            margin-left: 45%;
-        }
-        .nedreside{
-            border-radius: 50%;
-            width: 375px;
-            height: 300px;
-            margin-left: 40px;
-            box-shadow: 5px 5px 5px black;
-
-        }
-        .margin{
-            margin-left: 20%;
-
-        }
-    </style>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
         <img src="./bilder/Reise.jpg" alt="Nydelig bilde" width="100%" height="auto">
