--- a/italia.html
+++ b/italia.html
@@ -18,6 +18,7 @@
 <body>
     <a href="index.html">Tilbake</a>
     <h1>Italia</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid aspernatur commodi distinctio facilis in, magnam odit? Aliquam, atque cupiditate distinctio dolore impedit inventore modi nulla pariatur quia quidem velit vitae.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid aspernatur commodi distinctio facilis in, magnam odit? Aliquam, atque
+            cupiditate distinctio dolore impedit inventore modi nulla pariatur quia quidem velit vitae.</p>
 </body>
 </html>
